# synth

./: .gitignore  CMakeLists.txt
source/: MainComponent.cpp  MainComponent.h  OscilloscopeComponent.h  SineWaveSound.h  SineWaveVoice.h  main.cpp
